# data-warehousers

./: .gitignore  .mcp.json  CLAUDE.md  casing_inconsistencies.csv  dashboard.html  data_dictionary.xlsx  map.html  mcp_server.py  pyproject.toml  viz_data.json
.claude/: ralph-loop.local.md
.claude/hooks/: session-end.sh
.claude/memory/: diary.md  pending-transcripts.jsonl
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: cumulative_sum.sql
dbt/tests/: assert_county_entity_count_reconciles.sql  assert_county_gas_reconciles.sql  assert_county_oil_reconciles.sql  assert_decline_curve_completeness.sql  assert_decline_curve_well_only.sql  assert_gold_reconciles_with_silver.sql  assert_months_on_production_sequential.sql  assert_no_future_production_dates.sql  assert_no_negative_volumes.sql  assert_no_orphan_gold_records.sql
docs/: adding-new-state.md  data-dictionary.md  normalization_mapping.md  pipeline-runbook.md  schema-reference.md  source-mappings.md
docs/plans/: 2026-02-12-gold-dimensional-model.md  2026-02-15-res-db-design.md  2026-02-15-session-memory-design.md  2026-02-15-session-memory-plan.md
orchestration/: __init__.py  definitions.py  jobs.py  resources.py  schedules.py  workspace.yaml
orchestration/assets/: __init__.py  _dimensional_builder.py  _gold_builder.py  bronze.py  e2e.py  gold.py  silver.py
scripts/: data_flow_visualization.html  export_viz_data.py  init_res_db.py  rebuild_gold.py  serve.py  test_res_db_e2e.py
src/: __init__.py
src/decline/: __init__.py  arps.py  preprocessing.py
tests/: __init__.py  conftest.py
(+76 files in other folders)
